# TibiaHelper---Bot

./: README.md  boosted_creature.py  criatura.txt  exec_criatura.py  keep_alive.py  logs.txt  main.py  pyproject.toml  serversave.txt  stats.txt
