[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.0.1"
replit = "^3.1.0"
ipython = "^7.25.0"
openpyxl = "^3.0.7"
pandas = "^1.3.0"
selenium = "^3.141.0"
bs4 = "^0.0.1"
cloudscraper = "^1.2.58"
cfscrape = "^2.1.1"
schedule = "^1.1.0"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
